--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Abhyuday Tripathi -||- Portfolio</title>
+    <title>Abhyuday Tripathi - Portfolio</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
@@ -126,7 +126,7 @@
             >
             <br />
             <a target="_blank" href="https://github.com/abhyuday-tripathi"
-              >Twitter: @AbhyudayTripathi</a
+              >Github: @AbhyudayTripathi</a
             >
           </div>
         </div>
